- Fixed bug #49108 (2nd scan_dir produces seg fault)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@286555 c90b9560-bf6c-de11-be94-00142212c4b1